# openstack-port-provider

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
examples/: static-pod-netplan.yaml
openstack_port_provider/cmd/: main.py
openstack_port_provider/networking/: __init__.py
openstack_port_provider/networking/base/: __init__.py
openstack_port_provider/networking/netplan/: __init__.py
